2006-08-18  Aaron Bockover  <abockover@novell.com>

	* test/test.[ch]:
	* test/driver.c: Support pass/fail logging on tests to show group report

2006-08-18  Aaron Bockover  <abockover@novell.com>

	* test/test.c: 
	* test/test.h: Added result() to be used in place of g_strdup_printf(),
	it's shorter to write and allows the duped string to be freed safely;
	added license header to file

	* test/driver.c: Added license header to file

	* test/string-util.c:
	* test/ptrarray.c:
	* test/string.c:
	* test/list.c: Use result() in place of g_strdup_printf(), it's nicer

2006-08-18  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Implemented g_ptr_array_sort

	* test/ptrarray.c: Added sort test
	
	* test/driver.c: Added --help; support running N iterations and allow
	selecting which test groups to run; uses the test group table in tests.h
	
	* test/tests.h: Added group table
	
	* test/test.h:
	* test/test.c: Using a Group structure and table, removed run_groups
	as we only need run_group now

	* test/slist.h: Removed, not needed, tests/groups defined in tests.h

2006-08-18  Miguel de Icaza  <miguel@novell.com>

	* src/unicode.c: New file, to host unicode code, it will throw as
	this code is no longer used in the Mono runtime anyways.
	
	* src/glib.h: Use stdint.h types, a lot of the good stuff is
	replicated by glib.

2006-08-18  Duncan Mak  <duncan@a-chinaman.com>

	* src/glist.c: Implemented. Missing remove,
	remove_link and insert_before.

	* test/list.c: Tests for GList.

>>>>>>> .r63982
2006-08-17  Aaron Bockover  <abockover@novell.com>

	* src/gptrarray.c: Implemented g_ptr_array_remove and 
	g_ptr_array_remove_index

	* test/other: Removed, rewritten in Makefile.am

	* test/Makefile.am: Build test-eglib against local eglib and 
	test-glib against GLib 2.0 (replaces 'other')

	* test/ptrarray.c: Added tests for g_ptr_array_remove and
	g_ptr_array_remove_index

2006-08-17  Duncan Mak  <duncan@a-chinaman.com>

	* src/gslist.c: Added MIT license.